# Termax

./: .gitignore  CLAUDE.md  README.en.md  README.md  TERMAX_PLAN.md  icon-purge.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: release.yml
scripts/: bmp-gen.mjs  portable.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: termax.nsi
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: config_cmd.rs  credential_cmd.rs  debug_cmd.rs  edit_cmd.rs  font_cmd.rs  forward_cmd.rs  local_cmd.rs  mod.rs  monitor_cmd.rs  sftp_cmd.rs  ssh_cmd.rs
src-tauri/src/local/: mod.rs  pty.rs  wsl.rs
src-tauri/src/monitor/: client.rs  mod.rs  parser.rs
src-tauri/src/session/: manager.rs  mod.rs  pool.rs
src-tauri/src/sftp/: client.rs  editor.rs  mod.rs  transfer.rs
src-tauri/src/ssh/: channel.rs  client.rs  config.rs  credential.rs  forward.rs  mod.rs  proxy.rs
src-tauri/src/storage/: credential_store.rs  crypto.rs  db.rs  migration.rs  mod.rs  store.rs
src/app/: AppLayout.tsx  DebugPanel.tsx  MainArea.tsx  Sidebar.tsx  Splash.tsx  StatusBar.tsx  TitleBar.tsx
src/components/ui/: alert-dialog.tsx  button.tsx  data-table.tsx  dialog.tsx  empty.tsx  input.tsx  select.tsx  table.tsx  tooltip.tsx
src/features/connection/: BastionConfig.tsx  ConnectionForm.tsx  ConnectionManager.tsx  ConnectionTree.tsx  ProxyConfig.tsx  QuickPanel.tsx
src/features/credential/: CredentialForm.tsx  CredentialManager.tsx
src/features/forward/: ForwardConfig.tsx
src/features/monitoring/: CpuGauge.tsx  FullView.tsx  MemoryBar.tsx  MetricCard.tsx  MonitorOverlay.tsx  MonitoringPanels.tsx  OverviewPanel.tsx  ProcessesPanel.tsx  ThumbnailView.tsx  useMonitorPolling.ts
src/features/settings/: AboutPanel.tsx  GeneralPanel.tsx  SettingsDialog.tsx  TerminalPanel.tsx  helpers.tsx
src/features/sftp/: SftpBreadcrumb.tsx  SftpDeleteDialog.tsx  SftpFileList.tsx  SftpLayout.tsx  SftpPane.tsx  SftpTransferPanel.tsx  (+4 more)
src/hooks/: useClickOutside.ts  useFloatWindow.ts
src/i18n/: en-US.json  index.ts  zh-CN.json
src/lib/: clipboard.ts  debug.ts  fonts.ts  updater.ts  utils.ts
src/stores/: sessionStore.ts  settingsStore.ts  sftpStore.ts  terminalStore.ts  transferHistoryStore.ts
src/styles/: xterm.css
src/themes/: dracula.ts  index.ts  one-dark.ts  termax.ts  types.ts
src/ui/: TSplitPane.tsx
(+14 files in other folders)
