[package]
name = "termax"
version = "0.1.3"
description = "Termax - A modern SSH terminal"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.85"

[lib]
name = "termax_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# File system paths
dirs = "6"

# SSH
russh = { version = "0.60", default-features = false, features = ["ring"] }

# SFTP
russh-sftp = "2.1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# File watching
notify = { version = "7", features = ["macos_kqueue"] }

# Terminal
portable-pty = "0.9"

# Encryption
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

# Database
rusqlite = { version = "0.40.0", features = ["bundled"] }

# System font enumeration
font-kit = "0.14"
tauri-plugin-clipboard-manager = "2.3.2"
rfd = "0.15"
